# cli

./: README.md  justfile
agg/: .gitignore  Cargo.toml  README.md
agg/avt/: Cargo.toml
agg/avt/src/: buffer.rs  cell.rs  charset.rs  color.rs  cursor.rs  dirty_lines.rs  lib.rs  line.rs  parser.rs  pen.rs  saved_ctx.rs  tabs.rs  terminal.rs  vt.rs
agg/src/: asciicast.rs  events.rs  fonts.rs  lib.rs  main.rs  runner.rs  theme.rs  vt.rs
agg/src/renderer/: font.rs  mod.rs  svg.rs
agg/test/: frame.cast
als/: go.mod  go.sum  main.go
copy-folder/: Cargo.toml
copy-folder/src/: dialog.rs  directory.rs  lib.rs  main.rs  reader.rs  transfer.rs
copy-folder/tests/: reader_test.rs  transfer_test.rs
copy-folder/tests/common/: mod.rs
envee/: .home.toml  .jane.toml  .john.toml  Cargo.toml  test.sh
envee/src/: env.rs  main.rs
envee/src/cli/: mod.rs  run.rs  show.rs
envee/tests/: env_test.rs
update-asdf/: go.mod  go.sum  main.go
update-mise/: go.mod  go.sum  main.go
weather/: Cargo.toml
weather/src/: forecast.rs  graph.rs  info.rs  lib.rs  main.rs
