[package]
name = "agg"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
avt = { git = "https://github.com/asciinema/avt.git", tag = "v0.8.3" }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
fontdue = "0.9.2"
gifski = "1.32.0"
imgref = "1.10.1"
log = "0.4.21"
resvg = { version = "0.42.0", features = ["text"] }
rgb = "0.8.37"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
