[package]
name = "agg"
version = "0.0.2"
edition = "2021"
description = "asciinema gif generator"

[dependencies]
anyhow = "1.0.86"
avt = { path = "avt" }
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
fontdue = "0.9.2"
gifski = "1.32.0"
imgref = "1.10.1"
log = "0.4.22"
resvg = { version = "0.43.0", features = ["text"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
